h2. 0.4.8 (not yet released)

* adding support paths for Cucumber (bmabey)
* adding documentation for the flash (bmabey)

h2. 0.4.7 (2/12/2009)

* removed Clearance::Test::TestHelper. one less setup step. all test helpers now in shoulda_macros.

h2. 0.4.6 (2/11/2009)

* making the modules behave like mixins again. (hat-tip Eloy Duran)
* created Actions and PrivateMethods modules on controllers for future RDoc reasons.

h2. 0.4.5 (2/9/2009)

* [#43] Removed email downcasing. (local-part is case sensitive per RFC5321)
* [#42] Removed dependency on Mocha.
* Required Shoulda >= 2.9.1.
* Added password reset feature to clearance_features generator.
* Removed unnecessary session[:salt].
* [#41] Only store location for session[:return_to] for GET requests.
* Audited "sign up" naming convention. "Register" had slipped in a few places.
* Switched to SHA1 encryption. Cypher doesn't matter much for email confirmation, password reset. Better to have shorter hashes in the emails for clients who line break on 72 chars.

h2. 0.4.4 (2/2/2009)

* Added a generator for Cucumber features
* Standarized naming for "Sign up," "Sign in," and "Sign out"