@@ -11,7 +11,7 @@ Fature: Password Reset
     Scenario: User requests password reset
       Given I am signed up and confirmed as "email@person.com/password"
       When I request password reset link to be sent to "email@person.com"
-      Then I should see "Details for changing your password have been sent to email@person.com"
+      Then I should see "instructions for changing your password"
       And a password reset message should be sent to "email@person.com"
       
     Scenario: User updated his password and types wrong confirmation
